# emoji_on_esp32s3_touch_lcd_4.3B

./: .gitignore  CMakeLists.txt  README.md  SESSION_HANDOFF.md  partitions.csv  sdkconfig  sdkconfig.defaults
ESP32-S3-Touch-LCD-4.3B-BOX-Demo/Arduino/examples/01_I2C_Test/: 01_I2C_Test.ino
ESP32-S3-Touch-LCD-4.3B-BOX-Demo/Arduino/examples/02_RS485_Test/: 02_RS485_Test.ino
ESP32-S3-Touch-LCD-4.3B-BOX-Demo/Arduino/examples/05_IO_Test/: README.md  (+3 more)
ESP32-S3-Touch-LCD-4.3B-BOX-Demo/ESP-IDF/01_I2C_Test/: sdkconfig.defaults
ESP32-S3-Touch-LCD-4.3B-BOX-Demo/ESP-IDF/02_RS485_Test/: sdkconfig.defaults
ESP32-S3-Touch-LCD-4.3B-BOX-Demo/ESP-IDF/03_SD_Test/: README.md  sdkconfig.defaults
ESP32-S3-Touch-LCD-4.3B-BOX-Demo/ESP-IDF/04_RTC_Test/: CMakeLists.txt  sdkconfig.defaults
ESP32-S3-Touch-LCD-4.3B-BOX-Demo/ESP-IDF/05_IO_Test/: CMakeLists.txt  sdkconfig.defaults
ESP32-S3-Touch-LCD-4.3B-BOX-Demo/ESP-IDF/05_IO_Test/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c
ESP32-S3-Touch-LCD-4.3B-BOX-Demo/ESP-IDF/06_TWAItransmit/: sdkconfig.defaults
components/bsp/: CMakeLists.txt  bsp_board.c
components/bsp/include/: bsp_board.h
components/display/: CMakeLists.txt  display_service.c
components/display/include/: display_service.h
components/emotion/: CMakeLists.txt  emotion_engine.c
components/emotion/include/: emotion_engine.h
components/esp32_display_panel/: LOCAL_PATCHES.md
components/robot_link/: CMakeLists.txt  robot_link.c
components/robot_link/include/: robot_link.h
emoji/: 5.html
main/: CMakeLists.txt  app_main.c  idf_component.yml
(+63 files in other folders)
